@@ -2,6 +2,7 @@ TheXTech Changelog.
 
 Changes for 1.3.3.2
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
+-Added an ability to change sound setup (sample rate, channels, sample format, and the buffer size) via the [sound] INI section
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
